package com.Examen_4TP.Clases.HaltChecker;

import java.util.List;

public abstract class HaltChecker {
    public abstract boolean analizarCodigo (List<String> tokens);
}

